--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "e2e-boilerplate",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "bugs": {
+    "url": "https://github.com/e2e-boilerplate/e2e-boilerplate/issues"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "9.0.7",
     "@angular/common": "9.0.7",
@@ -23,6 +16,7 @@
     "tslib": "1.11.1",
     "zone.js": "0.10.3"
   },
+  "description": "E2e-boilerplate end-to-end test automation boilerplate. ",
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.7",
     "@angular/cli": "9.0.7",
@@ -43,5 +37,31 @@
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
     "typescript": "3.7.5"
-  }
+  },
+  "homepage": "https://github.com/e2e-boilerplate/e2e-boilerplate#readme",
+  "keywords": [
+    "boilerplate",
+    "boilerplate",
+    "e2e",
+    "e2e",
+    "e2e tests",
+    "example",
+    "integration test"
+  ],
+  "license": "MIT",
+  "name": "e2e-boilerplate",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/e2e-boilerplate/e2e-boilerplate.git"
+  },
+  "scripts": {
+    "build": "ng build",
+    "e2e": "ng e2e",
+    "lint": "ng lint",
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test"
+  },
+  "version": "0.0.0"
 }
