--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "author": "",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/e2e-boilerplate/issues"
   },
@@ -41,12 +41,7 @@
   "homepage": "https://github.com/e2e-boilerplate/e2e-boilerplate#readme",
   "keywords": [
     "boilerplate",
-    "boilerplate",
-    "e2e",
-    "e2e",
-    "e2e tests",
-    "example",
-    "integration test"
+    "e2e"
   ],
   "license": "MIT",
   "name": "e2e-boilerplate",
