--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,3 +20,5 @@ jobs:
         run: npm run lint --if-present
       - name: build
         run: npm run build --if-present
+      - name: test
+        run: npm run test
